Moved folders around, gathered identity context with appcontext, implemented create pet endpoint, added Pet entity
Migrations were regenerated.

--- a/GatilDosResgatadosApi/GatilDosResgatadosApi.csproj
+++ b/GatilDosResgatadosApi/GatilDosResgatadosApi.csproj
@@ -24,7 +24,8 @@
 
   <ItemGroup>
     <Folder Include="Core\Entities\" />
-    <Folder Include="Users\Entities\" />
+    <Folder Include="Areas\Users\Entities\" />
+    <Folder Include="GatilDosResgatadosApi\Infrastructure\" />
   </ItemGroup>
 
 </Project>
