Implemented endpoint to upload a media to a pet

--- a/GatilDosResgatadosApi/GatilDosResgatadosApi.csproj
+++ b/GatilDosResgatadosApi/GatilDosResgatadosApi.csproj
@@ -26,6 +26,7 @@
     <Folder Include="Core\Entities\" />
     <Folder Include="Areas\Users\Entities\" />
     <Folder Include="GatilDosResgatadosApi\Infrastructure\" />
+    <Folder Include="GatilDosResgatadosApi\Infrastructure\Data\" />
   </ItemGroup>
 
 </Project>
