Implemented create subscription plan endpoint

--- a/GatilDosResgatadosApi/GatilDosResgatadosApi.csproj
+++ b/GatilDosResgatadosApi/GatilDosResgatadosApi.csproj
@@ -23,10 +23,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\Entities\" />
     <Folder Include="Areas\Users\Entities\" />
     <Folder Include="GatilDosResgatadosApi\Infrastructure\" />
     <Folder Include="GatilDosResgatadosApi\Infrastructure\Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\sdk-dotnet\src\MercadoPago\MercadoPago.csproj" />
   </ItemGroup>
 
 </Project>
