--- a/GatilDosResgatadosApi/appsettings.Development.json
+++ b/GatilDosResgatadosApi/appsettings.Development.json
@@ -15,5 +15,9 @@
     "Secret": "yoursecret1234512312031923124314141413414310",
     "Issuer": "yourissuer123",
     "Audience": "youraudience123"
+  },
+  "MercadoPagoOptions": {
+    "AccessToken": "TEST-1909778205673691-101109-6effbf0c80a55627384209d2d6ce83dd-76316211",
+    "WebhookSecretSignature":  "token"
   }
 }
